Initial commit - not working

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 platform = espressif32
 board = ttgo-t-beam
 framework = arduino
+board_build.partitions = huge_app.csv ;See https://docs.platformio.org/en/latest/platforms/espressif32.html#partition-tables
 
 monitor_speed = 115200
